home banner overflow issue

--- a/src/components/HeroBanner/style.scss
+++ b/src/components/HeroBanner/style.scss
@@ -6,7 +6,6 @@
 .hero-banner {
 	position: relative;
 	min-height: 100vh;
-
 	background-image: url("https://signature-project.in/sector71-highrise/images/banner.jpg");
 	background-size: cover;
 	background-position: center;
@@ -15,6 +14,10 @@
 	align-items: center;
 	color: white;
 	text-align: center;
+
+	@media (max-width: 600px) {
+		min-height: 120vh;
+	}
 }
 
 .overlay {
